Resolve issue with grid overflow

--- a/stlyle.css
+++ b/stlyle.css
@@ -3,7 +3,7 @@
 body {
     padding: 0px;
     margin: 0px;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     gap: 2rem;
     height: 100vh;
@@ -127,20 +127,21 @@ footer{
 }
 
 .main-area{
+    padding: 1rem 2rem 1rem 0.5rem;
+    flex: 1;
     display: flex;
     align-items: center;
-    padding: 1rem 2rem 1rem 0.5rem;
 }
 
 .sketchpad-container{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    max-height: 90vh;
+    flex: 0 1 90vh;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     aspect-ratio: 1/1;
+    max-height: 90vh;
 }
 
-.flex-item {
-    width: calc(80vh / 7);
-    aspect-ratio: 1/1;
+.grid-cell {
+    border-style: solid;
 }
